<resources>
    <string name="app_name">Group_7_Proj</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_to_main">Back to Main</string>
    <string name="delivery">Delivery</string>
    <string name="computer">Computer</string>
    <string name="babysitting">Babysitting</string>
    <string name="lawn_mowing">Lawn Mowing</string>
    <string name="other">Other</string>
    <string name="title_activity_job_post_search">JobPostSearchActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="textview">TextView</string>
    <string name="cleaning">Cleaning</string>
    <string name="dog_walking">Dog walking</string>
    <string name="search">search</string>
    <string name="search_here">Search Here</string>
    <string name="clear_results">clear results</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button">Button</string>
    <string name="title_activity_potential_employee">Potential Employee</string>
</resources>